--- a/src/web/admins/templates/admins/actor_list.html
+++ b/src/web/admins/templates/admins/actor_list.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% load humanize %}
 {% load core_tags %}
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %} Actors {% endblock %}
 
 {% block content %}
     <div class="row">
@@ -12,14 +12,14 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="mb-0 font-size-24">
-                            Actor Management
+                            ACTOR MANAGEMENT
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
 
                         <button type="button" class="btn btn-primary mb-1"
                                 onclick="window.location.href='{% url 'admins:actor-create' %}'">
-                          <i class="fa fa-plus"></i>   Add Actor
+                            <i class="fa fa-plus"></i> Add Actor
                         </button>
 
                     </div>
@@ -28,93 +28,89 @@
             </div>
         </div>
     </div>
- <div class="row justify-content-between">
-        <div class="col-12 col-md-12 p-2 mt-2">
-            <form method="get">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control " placeholder="Enter Actor Name"
-                           id="id_name"
-                           value="{% if actor_filter_form.name.value %}{{ actor_filter_form.name.value }}{% endif %}"
-                           name="name">
-                    <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
-                    <a class="btn btn-danger" href="{% url 'admins:actor-list' %}">
-                        <i class="fas fa-brush"></i>
-                    </a>
-                </div>
 
-            </form>
-        </div>
-    </div>
-<div class="row">
-    <div class="col-12">
-        <div class="row">
-            <div class="col-12">
-                <div class="card shadow-lg rounded-lg">
-                    {% if object_list %}
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead class="thead-light">
-                            <tr>
-                                <th>PK</th>  <!-- New column for Primary Key -->
-                                <th>Profile Image</th>  <!-- Move Profile Image column here -->
-                                <th>Actor Name</th>
-                                <th>Biography</th>  <!-- New column for Biography -->
-                                <th>Date of Birth</th>  <!-- New column for Date of Birth -->
-                                <th>Created At</th>  <!-- New column for Creation Date -->
-                                <th>Action</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-
-                            {% for object in object_list %}
-                            <tr>
-                                <td>{{ object.pk }}</td>  <!-- Display Primary Key -->
-                                <td>
-                                    {% if object.profile_image %}
-                                        <img src="{{ object.profile_image.url }}" alt="Profile Image" style="width: 30px; height: 30px; border-radius: 50%;">
-                                    {% else %}
-                                        <span>No Image</span>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    <a href="{% url 'admins:actor-update' object.pk %}">
-                                        {{ object.name }}
+    <div class="row">
+        <div class="col-12">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card shadow-lg rounded-lg">
+                        <div class="card-body mb-0 pb-0 border-bottom">
+                            <form method="get">
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control " placeholder="Enter Actor Name"
+                                           id="id_name"
+                                           value="{% if actor_filter_form.name.value %}{{ actor_filter_form.name.value }}{% endif %}"
+                                           name="name"> &nbsp;
+                                    <button class="btn btn-secondary" type="submit">
+                                        <i class="fas fa-search"></i>
+                                    </button> &nbsp;
+                                    <a class="btn btn-danger" href="{% url 'admins:actor-list' %}">
+                                        <i class="fas fa-brush"></i>
                                     </a>
-                                </td>
-                                <td>{{ object.biography|truncatewords:10 }}</td>  <!-- Display Biography (truncated) -->
-                                <td>{{ object.date_of_birth|date:"Y-m-d" }}</td>  <!-- Display Date of Birth -->
-                                <td>{{ object.created_at|date:"Y-m-d H:i:s" }}</td>  <!-- Display Creation Date -->
-                                <th>
-                                    <a href="{% url 'admins:actor-update' object.pk %}">
-                                        <i class="fa fa-edit"></i>
-                                    </a> &nbsp;
-                                    <a href="{% url 'admins:actor-delete' object.pk %}" class="text-danger">
-                                        <i class="fa fa-trash"></i>
-                                    </a>
-                                </th>
-                            </tr>
-                            {% endfor %}
+                                </div>
 
-                            </tbody>
-                        </table>
+                            </form>
+                        </div>
+                        <div class="card-body p-0">
+                            {% if object_list %}
+                                <div class="table-responsive">
+                                    <table class="table table-hover">
+                                        <thead class="thead-light">
+                                        <tr>
+                                            <th>PK</th>  <!-- New column for Primary Key -->
+                                            <th>Actor Name</th>
+                                            <th>DOB</th>  <!-- New column for Date of Birth -->
+                                            <th>Created At</th>  <!-- New column for Creation Date -->
+                                            <th>-</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+
+                                        {% for object in object_list %}
+                                            <tr>
+                                                <td>{{ object.pk }}</td>  <!-- Display Primary Key -->
+                                                <td>
+                                                    <a href="{% url 'admins:actor-update' object.pk %}">
+                                                        {{ object.name }}
+                                                    </a>
+                                                </td>
+                                                <td>{{ object.date_of_birth|date:"Y/m/d" }}</td>
+                                                <!-- Display Date of Birth -->
+                                                <td>{{ object.created_at|date:"Y/m/d H:i:s" }}</td>
+                                                <!-- Display Creation Date -->
+                                                <th>
+                                                    <a href="{% url 'admins:actor-update' object.pk %}">
+                                                        <i class="fa fa-edit"></i>
+                                                    </a> &nbsp;
+                                                    <a href="{% url 'admins:actor-delete' object.pk %}"
+                                                       class="text-danger">
+                                                        <i class="fa fa-trash"></i>
+                                                    </a>
+                                                </th>
+                                            </tr>
+                                        {% endfor %}
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            {% else %}
+                                <div class="card-body">
+                                    <p class="text-danger mb-0"><b>No actors available</b></p>
+                                </div>
+                            {% endif %}
+                        </div>
                     </div>
-                    {% else %}
-                    <div class="card-body">
-                        <p class="text-danger mb-0"><b>No actors available</b></p>
-                    </div>
-                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
-</div>
 
- <div class="row">
+    <div class="row">
         <div class="col-md-12">
             <div class="mt-4">
                 <ul class="pagination">
                     {% if object_list.has_previous %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
@@ -122,13 +118,11 @@
                             </span>
                         </li>
                     {% endif %}
-                    &nbsp;&nbsp;&nbsp;
-                    <li  class="page-link rounded">
+                    <li class="">
                         <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
-                    &nbsp;&nbsp;&nbsp;
                     {% if object_list.has_next %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
