--- a/src/web/admins/templates/admins/category_list.html
+++ b/src/web/admins/templates/admins/category_list.html
@@ -4,7 +4,7 @@
 {% load humanize %}
 {% load core_tags %}
 
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %} Categories {% endblock %}
 
 {% block content %}
 
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="mb-0 font-size-24">
-                            Category Management
+                            CATEGORIES MANAGEMENT
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
@@ -39,7 +39,7 @@
                            id="id_name"
                            value="{% if category_filter_form.name.value %}{{ category_filter_form.name.value }}{% endif %}"
                            name="name">
-                    <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+                    &nbsp;<button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>&nbsp;
                     <a class="btn btn-danger" href="{% url 'admins:category-list' %}">
                         <i class="fas fa-brush"></i>
                     </a>
@@ -61,9 +61,6 @@
                                     <tr>
                                         <th>PK</th>
                                         <th>Name</th>
-                                        <th>Slug</th>
-                                        <th>Thumbnail</th>
-                                        <th>Description</th>
                                         <th>Created At</th>
                                         <th>Action</th>
                                     </tr>
@@ -71,27 +68,17 @@
                                     <tbody>
                                     {% for object in object_list %}
                                         <tr>
-                                            <td>{{ object.pk }}</td>
+                                            <td>#{{ object.pk }}</td>
                                             <td>
                                                 <a href="{% url 'admins:category-update' object.pk %}">
                                                     {{ object.name }}
                                                 </a>
                                             </td>
-                                            <td>{{ object.slug }}</td>
-                                            <td>
-                                                {% if object.thumbnail %}
-                                                    <img src="{{ object.thumbnail.url }}" alt="Thumbnail"
-                                                         style="width: 30px; height: auto;" class="rounded">
-                                                {% else %}
-                                                    <span>No Image</span>
-                                                {% endif %}
-                                            </td>
-                                            <td>{{ object.description|truncatewords:6 }}</td>
                                             <td>{{ object.created_at|date:"Y-m-d" }}</td>
                                             <th>
                                                 <a href="{% url 'admins:category-update' object.pk %}">
                                                     <i class="fa fa-edit"></i>
-                                                </a> &nbsp;
+                                                </a>
                                                 <a href="{% url 'admins:category-delete' object.pk %}"
                                                    class="text-danger">
                                                     <i class="fa fa-trash"></i>
@@ -120,7 +107,7 @@
             <div class="mt-4">
                 <ul class="pagination">
                     {% if object_list.has_previous %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
@@ -128,13 +115,11 @@
                             </span>
                         </li>
                     {% endif %}
-                    &nbsp;&nbsp;&nbsp;
-                    <li class="page-link rounded">
+                    <li class="">
                         <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
-                    &nbsp;&nbsp;&nbsp;
                     {% if object_list.has_next %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
