--- a/src/web/admins/templates/admins/contentrating_list.html
+++ b/src/web/admins/templates/admins/contentrating_list.html
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="mb-0 font-size-24">
-                            Content Rating Management
+                            CONTENT RATINGS MANAGEMENT
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
@@ -39,7 +39,7 @@
                            id="id_code"
                            value="{% if contentrating_filter_form.code.value %}{{ contentrating_filter_form.code.value }}{% endif %}"
                            name="code">
-                    <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+                    &nbsp;<button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>&nbsp;
                     <a class="btn btn-danger" href="{% url 'admins:content-rating-list' %}">
                         <i class="fas fa-brush"></i>
                     </a>
@@ -63,7 +63,7 @@
                                 <th>Description</th>
                                 <th>Created At</th>
                                 <th>Updated At</th>
-                                <th>Action</th>
+                                <th>-</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -108,7 +108,7 @@
             <div class="mt-4">
                 <ul class="pagination">
                     {% if object_list.has_previous %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
@@ -116,13 +116,11 @@
                             </span>
                         </li>
                     {% endif %}
-                    &nbsp;&nbsp;&nbsp;
-                    <li class="page-link rounded">
+                    <li class="">
                         <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
-                    &nbsp;&nbsp;&nbsp;
                     {% if object_list.has_next %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
