--- a/src/web/admins/templates/admins/tag_list.html
+++ b/src/web/admins/templates/admins/tag_list.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 {% load humanize %}
 {% load core_tags %}
-{% block subtitle %} {{ request.user }} {% endblock %}
+{% block subtitle %} Tags {% endblock %}
 
 {% block content %}
     <div class="row">
@@ -13,14 +13,14 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="mb-0 font-size-24">
-                            Tag Management
+                            TAG MANAGEMENT
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
 
                         <button type="button" class="btn btn-primary mb-1"
                                 onclick="window.location.href='{% url 'admins:tag-create' %}'">
-                          <i class="fa fa-plus"></i>   Add Tag
+                            <i class="fa fa-plus"></i> Add Tag
                         </button>
 
                     </div>
@@ -29,82 +29,84 @@
             </div>
         </div>
     </div>
-    <div class="row justify-content-between">
-        <div class="col-12 col-md-12 p-2 mt-2">
-            <form method="get">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control " placeholder="Enter Tag Name"
-                           id="id_name"
-                           value="{% if tag_filter_form.name.value %}{{ tag_filter_form.name.value }}{% endif %}"
-                           name="name">
-                    <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
-                    <a class="btn btn-danger" href="{% url 'admins:tag-list' %}">
-                        <i class="fas fa-brush"></i>
-                    </a>
+
+    <div class="row">
+        <div class="col-12">
+            <div class="card shadow-lg rounded-lg">
+                <div class="card-body border-bottom pb-0 mb-0">
+                    <form method="get">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control " placeholder="Enter Tag Name"
+                                   id="id_name"
+                                   value="{% if tag_filter_form.name.value %}{{ tag_filter_form.name.value }}{% endif %}"
+                                   name="name">
+                            &nbsp;<button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+                            &nbsp;<a class="btn btn-danger" href="{% url 'admins:tag-list' %}">
+                                <i class="fas fa-brush"></i>
+                            </a>
+                        </div>
+
+                    </form>
                 </div>
+                <div class="card-body p-0">
+                    {% if object_list %}
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th>
+                                        #
+                                    </th>
+                                    <th>Tag Name</th>
+                                    <th>Slug</th>
+                                    <th>Created At</th>
+                                    <th>-</th>
+                                </tr>
+                                </thead>
+                                <tbody>
 
-            </form>
+                                {% for object in object_list %}
+                                    <tr>
+                                        <td>{{ forloop.counter }}</td>
+                                        <td>
+                                            <a href="{% url 'admins:tag-update' object.pk %}">
+                                                {{ object.name }}
+                                            </a>
+                                        </td>
+                                        <td>{{ object.slug }}</td>
+                                        <td>{{ object.created_at|date:"Y-m-d H:i:s" }}</td>
+                                        <th>
+                                            <a href="{% url 'admins:tag-update' object.pk %}">
+                                                <i class="fa fa-edit"></i>
+                                            </a> &nbsp;
+                                            <a href="{% url 'admins:tag-delete' object.pk %}" class="text-danger">
+                                                <i class="fa fa-trash"></i>
+                                            </a>
+                                        </th>
+                                    </tr>
+                                {% endfor %}
+
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <div class="m-4">
+                            <p class="text-danger mb-0">
+                                <b>No objects available</b>
+                            </p>
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 
-<div class="row">
-    <div class="col-12">
-        <div class="card shadow-lg rounded-lg">
-            {% if object_list %}
-            <div class="table-responsive">
-                <table class="table table-hover">
-                    <thead class="thead-light">
-                    <tr>
-                        <th>
-                            #
-                        </th>
-                        <th>Tag Name</th>
-                        <th>Slug</th>
-                        <th>Created At</th>
-                        <th>Action</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    {% for object in object_list %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>
-                            <a href="{% url 'admins:tag-update' object.pk %}">
-                                {{ object.name }}
-                            </a>
-                        </td>
-                        <td>{{ object.slug }}</td>
-                        <td>{{ object.created_at|date:"Y-m-d H:i:s" }}</td>
-                        <th>
-                            <a href="{% url 'admins:tag-update' object.pk %}">
-                                <i class="fa fa-edit"></i>
-                            </a> &nbsp;
-                            <a href="{% url 'admins:tag-delete' object.pk %}" class="text-danger">
-                                <i class="fa fa-trash"></i>
-                            </a>
-                        </th>
-                    </tr>
-                    {% endfor %}
-
-                    </tbody>
-                </table>
-            </div>
-            {% else %}
-            <div class="card-body">
-                <p class="text-danger mb-0"><b>No objects available</b></p>
-            </div>
-            {% endif %}
-        </div>
-    </div>
-</div>
-
- <div class="row">
+    <div class="row">
         <div class="col-md-12">
             <div class="mt-4">
                 <ul class="pagination">
                     {% if object_list.has_previous %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
@@ -112,13 +114,11 @@
                             </span>
                         </li>
                     {% endif %}
-                    &nbsp;&nbsp;&nbsp;
-                    <li  class="page-link rounded">
+                    <li class="">
                         <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
-                    &nbsp;&nbsp;&nbsp;
                     {% if object_list.has_next %}
-                        <li class="page-link rounded">
+                        <li>
                             <span>
                                 <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
